--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width;initial-scale=1;" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Zoe Kafkes Portfolio</title>
   <link href="css/style.css" rel="stylesheet" media="screen"/>
   <link href="css/mobile.css" rel="stylesheet" media="screen" />
