--- a/about-me.html
+++ b/about-me.html
@@ -6,23 +6,28 @@
   <meta name="viewport" content="width=device-width;initial-scale=1;" />
   <title>Zoe Kafkes About Me</title>
   <link href="css/style.css" rel="stylesheet" media="screen"/>
-  <link href="css/mobile.css" rel="stylesheet" media="screen" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+  <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
-    <header>
-      <h1>Zoe Kafkes About Me</h1>
-    </header>
-
-    <nav>
-      <ul>
-        <li><a href="index.html"><img src="img/logo-04.png" alt="Zoe Kafkes Logo"></a></li>
-        <li><a href="about-me.html">about me</a></li>
-        <li><a href="design.html">design</a></li>
-        <li><a href="photography.html">photography</a></li>
-        <li><a href="contact.html">contact</a></li>
-      </ul>
-    </nav>
+  <header>
+    <h1>Zoe Kafkes - About Me</h1>
+    <a class='mobile-logo' href="index.html">
+      <img src="img/logo-04.png" alt="Zoe Kafkes" height='30'>
+    </a>
+    <a class='mobile-nav-toggle' onclick='navToggle()'><i class='fa fa-bars'></i></a>
+  </header>
+  <nav>
+    <ul>
+      <li class='nav-logo'><a href="index.html"><img src="img/logo-04.png" alt="Zoe Kafkes Logo"></a></li>
+      <li><a href="about-me.html">about me</a></li>
+      <li><a href="design.html">design</a></li>
+      <li><a href="photography.html">photography</a></li>
+      <li><a href="contact.html">contact</a></li>
+    </ul>
+  </nav>
 
   <main>
     <h1>about me</h1>
