--- a/photography.html
+++ b/photography.html
@@ -6,24 +6,27 @@
   <meta name="viewport" content="width=device-width;initial-scale=1;" />
   <title>Zoe Kafkes Photography</title>
   <link href="css/style.css" rel="stylesheet" media="screen"/>
-  <link href="css/mobile.css" rel="stylesheet" media="screen" />
-  <link rel="stylesheet" type="text/css" media="all" href="jgallery/dist/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" media="all" href="jgallery/dist/css/jgallery.min.css?v=1.5.5" />
-    <link rel="stylesheet" type="text/css" media="all" href="jgallery/dist/css/jgallery.css" />
+  <link rel="stylesheet" type="text/css" media="all" href="jgallery/dist/css/jgallery.css" />
   <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
   <script type="text/javascript" src="js/jgallery.min.js?v=1.5.5"></script>
   <script type="text/javascript" src="js/touchswipe.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
   <div id="wrapper">
   <header>
-    <h1>Zoe Kafkes Photography</h1>
+    <h1>Zoe Kafkes - Photography</h1>
+    <a class='mobile-logo' href="index.html">
+      <img src="img/logo-04.png" alt="Zoe Kafkes" height='30'>
+    </a>
+    <a class='mobile-nav-toggle' onclick='navToggle()'><i class='fa fa-bars'></i></a>
   </header>
-
   <nav>
     <ul>
-      <li><a href="index.html"><img src="img/logo-04.png" alt="Zoe Kafkes Logo"></a></li>
+      <li class='nav-logo'><a href="index.html"><img src="img/logo-04.png" alt="Zoe Kafkes Logo"></a></li>
       <li><a href="about-me.html">about me</a></li>
       <li><a href="design.html">design</a></li>
       <li><a href="photography.html">photography</a></li>
