--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width;initial-scale=1;" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Zoe Kafkes Design</title>
   <link href="css/style.css" rel="stylesheet" media="screen"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
